[metadata]
name = flybywire
author = Thomas Antony
author-email = tantony.purdue@gmail.com
summary = A declarative library for building virtual-DOM user interfaces in pure Python.
description-file = README.md
home-page = https://github.com/thomasantony/flybywire

license = MIT
keywords =
    react
    web
    framework
    javascript
    asynchronous
    gui
    declarative
    websockets


classifiers =
    Development Status :: 2 - Pre-Alpha
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    License :: OSI Approved :: MIT License

[files]
packages = flybywire

extra_files =
        setup.py
        README.md
        flybywire/static/main.html
        flybywire/static/flybywire.js

[bdist_wheel]
universal = 1

[aliases]
test=pytest
